--- a/index.html
+++ b/index.html
@@ -2,30 +2,27 @@
 <html  itemscope itemtype="http://schema.org/WebPage">
 <head>
     <title>PHPLucidFrame</title>
-    <link rel="canonical" href="http://phplucidframe.sithukyaw.com/" />
+    <link rel="canonical" href="http://phplucidframe.sithukyaw.com" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" /> <meta name="description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework brought to you by a developer from Myanmar (Burma). It is simple, easy, lightweight and yet powerful." />
-<meta name="keywords" content="PHP LucidFrame, PHP, Framework, Web Application Development, Toolkit, PHP/MySQL/Apache Development" />
-<!-- Facebook -->
+<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+<meta name="description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
+<meta name="keywords" content="PHP LucidFrame, PHP, Framework, Web Application Development, Toolkit" />
 <meta property="og:title" content="PHPLucidFrame" />
-<meta property="og:url" content="http://phplucidframe.sithukyaw.com/" />
+<meta property="og:url" content="http://phplucidframe.sithukyaw.com" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="http://phplucidframe.sithukyaw.com/images/logo-200x200.jpg" />
-<meta property="og:description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework brought to you by a developer from Myanmar (Burma). It is simple, easy, lightweight and yet powerful." />
+<meta property="og:description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
 <meta property="og:site_name" content="PHPLucidFrame" />
-<!-- Twitter -->
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@phplucidframe" />
+<meta name="twitter:site" content="phplucidframe" />
 <meta name="twitter:title" content="PHPLucidFrame" />
-<meta name="twitter:description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework brought to you by a developer from Myanmar (Burma). It is simple, easy, lightweight and yet powerful." />
+<meta name="twitter:description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
 <meta name="twitter:image" content="http://phplucidframe.sithukyaw.com/images/logo-120x120.jpg" />
-<!-- Schema.org markup for Google+ -->
-<meta itemprop="name" content="PHPLucidFrame">
-<meta itemprop="description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework brought to you by a developer from Myanmar (Burma). It is simple, easy, lightweight and yet powerful.">
-<meta itemprop="image" content="http://phplucidframe.sithukyaw.com/images/logo-200x200.jpg">
-
+<meta itemprop="name" content="PHPLucidFrame" />
+<meta itemprop="description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
+<meta itemprop="image" content="http://phplucidframe.sithukyaw.com/images/logo-200x200.jpg" />
 <link rel="shortcut icon" href="http://phplucidframe.sithukyaw.com/images/favicon.ico" type="image/x-icon" />
-<link href="http://phplucidframe.sithukyaw.com/css/base.min.css" rel="stylesheet" type="text/css" /><link href="http://phplucidframe.github.io/vendor/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /><link href="http://phplucidframe.sithukyaw.com/js/vendor/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" /><script src="http://phplucidframe.sithukyaw.com/js/vendor/jquery/jquery.min.js" type="text/javascript"></script><script src="http://phplucidframe.sithukyaw.com/js/vendor/jquery-ui/jquery-ui.min.js" type="text/javascript"></script><script type="text/javascript">var LC = {};var WEB_ROOT = "http://phplucidframe.sithukyaw.com/";LC.root = WEB_ROOT;var WEB_APP_ROOT = "http://phplucidframe.sithukyaw.com/app/";LC.appRoot = WEB_ROOT;LC.self = "http://phplucidframe.sithukyaw.com/";LC.lang = "";LC.baseURL = "/";LC.route = "";LC.cleanRoute = "home";LC.namespace = "";LC.sites = false;LC.sitewideWarnings = "New version 1.11.0 is released on Jan 11, 2016";</script><script src="http://phplucidframe.sithukyaw.com/js/LC.min.js" type="text/javascript"></script></head>
+<link href="http://phplucidframe.sithukyaw.com/css/base.css" rel="stylesheet" type="text/css" /><link href="http://phplucidframe.github.io/vendor/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /><link href="http://phplucidframe.sithukyaw.com/js/vendor/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" /><link href="http://phplucidframe.sithukyaw.com/app/css/style.css" rel="stylesheet" type="text/css" /><script src="http://phplucidframe.sithukyaw.com/js/vendor/jquery/jquery.min.js" type="text/javascript"></script><script src="http://phplucidframe.sithukyaw.com/js/vendor/jquery-ui/jquery-ui.min.js" type="text/javascript"></script><script type="text/javascript">var LC = {};var WEB_ROOT = "http://phplucidframe.sithukyaw.com/";LC.root = WEB_ROOT;var WEB_APP_ROOT = "http://phplucidframe.sithukyaw.com/app/";LC.appRoot = WEB_ROOT;LC.self = "http://phplucidframe.sithukyaw.com";LC.lang = "";LC.baseURL = "/";LC.route = "";LC.cleanRoute = "home";LC.namespace = "";LC.sites = false;LC.sitewideWarnings = [];</script><script src="http://phplucidframe.sithukyaw.com/js/LC.js" type="text/javascript"></script></head>
 <body>
     <!-- Google Tag Manager -->
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-M34CB3"
@@ -40,18 +37,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div id="page-container">
         <div id="header">
             <div class="container clearfix">
-                <a href="http://phplucidframe.sithukyaw.com/" id="logo">PHPLucidFrame</a>
+                <a href="http://phplucidframe.sithukyaw.com" id="logo">PHPLucidFrame</a>
                 <div id="language-switcher">
                                 </div>
                 <ul id="menu" class="clearfix">
                     <li>
-                        <a href="http://phplucidframe.sithukyaw.com/" class="active">Welcome</a>
+                        <a href="http://phplucidframe.sithukyaw.com" class="active">Welcome</a>
                     </li>
                     <li>
                         <a href="http://phplucidframe.sithukyaw.com/cookbook" >Documentation</a>
                     </li>
                     <li>
-                        <a href="https://api-phplucidframe.5apps.com/1.11/namespaces/default.html" target="_blank">API</a>
+                        <a href="https://api-phplucidframe.5apps.com/latest/namespaces/default.html" target="_blank">API</a>
                     </li>
                     <li>
                         <a href="http://phplucidframe.sithukyaw.com/community" >Community</a>
@@ -120,7 +117,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
         <a href="http://phplucidframe.sithukyaw.com/download/release/latest" class="button green large" rel="nofollow">
             <i class="fa fa-download"></i>
-             Download 1.11.0 stable        </a>
+             Download 1.12.0 stable        </a>
                 <div class="slider-nav">
             <a href="#" class="buttons prev"><i class="fa fa-chevron-circle-left"></i></a>
             <a href="#" class="buttons next"><i class="fa fa-chevron-circle-right"></i></a>
@@ -128,7 +125,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </p>
 </div>
 <p>
-    <i class="fa fa-file-text-o"></i> <a href="https://github.com/phplucidframe/phplucidframe/wiki/Release-Notes:-1.11.0" target="_blank">Check the Release Note 1.11.0 stable</a>
+    <i class="fa fa-file-text-o"></i> <a href="https://github.com/phplucidframe/phplucidframe/wiki/Release-Notes:-1.12.0" target="_blank">Check the Release Note 1.12.0 stable</a>
 </p>
 <h3>PHPLucidFrame is suitable for you if...</h3>
 <ul class="custom-list-style">
