--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="canonical" href="http://phplucidframe.sithukyaw.com/downloads"/>
+    <link rel="canonical" href="http://www.phplucidframe.com/downloads"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="refresh" content="0; url=http://phplucidframe.sithukyaw.com/downloads" />
+    <meta http-equiv="refresh" content="0; url=http://www.phplucidframe.com/downloads" />
 </head>
 <body>
     <h1>Redirecting...</h1>
-    <a href="http://phplucidframe.sithukyaw.com/downloads">Click here if you are not redirected.</a>
+    <a href="http://www.phplucidframe.com/downloads">Click here if you are not redirected.</a>
     <script>
-        window.location = 'http://phplucidframe.sithukyaw.com/downloads';
+        window.location = 'http://www.phplucidframe.com/downloads';
     </script>
 </body>
 </html>
