--- a/index.html
+++ b/index.html
@@ -3,84 +3,78 @@
 
 <head>
     <title>PHPLucidFrame</title>
-    <link rel="canonical" href="http://phplucidframe.sithukyaw.com" />
+    <link rel="canonical" href="http://www.phplucidframe.com" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
     <meta name="keywords" content="PHP LucidFrame, PHP, Framework, Web Application Development, Toolkit" />
     <meta property="og:title" content="PHPLucidFrame" />
-    <meta property="og:url" content="http://phplucidframe.sithukyaw.com" />
+    <meta property="og:url" content="http://www.phplucidframe.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="http://phplucidframe.sithukyaw.com/images/logo-200x200.jpg" />
+    <meta property="og:image" content="http://www.phplucidframe.com/assets/images/logo-200x200.jpg" />
     <meta property="og:description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
     <meta property="og:site_name" content="PHPLucidFrame" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="phplucidframe" />
+    <meta name="twitter:site" content="@phplucidframe" />
     <meta name="twitter:title" content="PHPLucidFrame" />
     <meta name="twitter:description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
-    <meta name="twitter:image" content="http://phplucidframe.sithukyaw.com/images/logo-120x120.jpg" />
+    <meta name="twitter:image" content="http://www.phplucidframe.com/assets/images/logo-120x120.jpg" />
     <meta itemprop="name" content="PHPLucidFrame" />
     <meta itemprop="description" content="PHPLucidFrame (a.k.a LucidFrame) is a PHP application development framework that is simple, easy, lightweight and yet powerful." />
-    <meta itemprop="image" content="http://phplucidframe.sithukyaw.com/images/logo-200x200.jpg" />
-    <link rel="shortcut icon" href="http://phplucidframe.sithukyaw.com/images/favicon.ico" type="image/x-icon" />
-    <link href="http://phplucidframe.sithukyaw.com/css/base.css" rel="stylesheet" type="text/css" />
+    <meta itemprop="image" content="http://www.phplucidframe.com/assets/images/logo-200x200.jpg" />
+    <link rel="shortcut icon" href="http://www.phplucidframe.com/assets/images/favicon.ico" type="image/x-icon" />
+    <link href="http://www.phplucidframe.com/assets/css/base.css" rel="stylesheet" type="text/css" />
     <link href="http://phplucidframe.github.io/vendor/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="http://phplucidframe.sithukyaw.com/js/vendor/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" />
-    <link href="http://phplucidframe.sithukyaw.com/app/css/style.css" rel="stylesheet" type="text/css" />
-    <script src="http://phplucidframe.sithukyaw.com/js/vendor/jquery/jquery.min.js" type="text/javascript"></script>
-    <script src="http://phplucidframe.sithukyaw.com/js/vendor/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
+    <link href="http://www.phplucidframe.com/assets/js/vendor/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+    <link href="http://www.phplucidframe.com/app/assets/css/style.css" rel="stylesheet" type="text/css" />
+    <script src="http://www.phplucidframe.com/assets/js/vendor/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="http://www.phplucidframe.com/assets/js/vendor/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         var LC = {};
-        var WEB_ROOT = "http://phplucidframe.sithukyaw.com/";
+        var WEB_ROOT = "http://www.phplucidframe.com/";
         LC.root = WEB_ROOT;
-        var WEB_APP_ROOT = "http://phplucidframe.sithukyaw.com/app/";
+        var WEB_APP_ROOT = "http://www.phplucidframe.com/app/";
         LC.appRoot = WEB_ROOT;
-        LC.self = "http://phplucidframe.sithukyaw.com";
+        LC.self = "http://www.phplucidframe.com";
         LC.lang = "";
         LC.baseURL = "/";
-        LC.route = "";
+        LC.route = "home";
         LC.cleanRoute = "home";
         LC.namespace = "";
         LC.sites = false;
         LC.sitewideWarnings = [];
+        LC.vars = {};
     </script>
-    <script src="http://phplucidframe.sithukyaw.com/js/LC.js" type="text/javascript"></script>
+    <script src="http://www.phplucidframe.com/assets/js/LC.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <!-- Google Tag Manager -->
-    <noscript>
-        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-M34CB3" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-M34CB3');
-    </script>
-    <!-- End Google Tag Manager -->
     <div id="wrapper">
         <div id="page-container">
             <div id="header">
-                <div class="container clearfix"> <a href="http://phplucidframe.sithukyaw.com" id="logo">PHPLucidFrame</a>
-                    <div id="language-switcher"> </div>
+                <div class="container clearfix">
+                    <a href="http://www.phplucidframe.com" id="logo">PHPLucidFrame</a>
+                    <div id="language-switcher">
+                    </div>
                     <ul id="menu" class="clearfix">
-                        <li> <a href="http://phplucidframe.sithukyaw.com" class="active">Welcome</a> </li>
-                        <li> <a href="http://phplucidframe.sithukyaw.com/cookbook">Documentation</a> </li>
-                        <li> <a href="http://phplucidframe.sithukyaw.com/api">API</a> </li>
-                        <li> <a href="http://phplucidframe.sithukyaw.com/community">Community</a> </li>
-                        <li> <a href="http://phplucidframe.sithukyaw.com/downloads">Downloads</a> </li>
-                        <li> <a href="https://github.com/phplucidframe/phplucidframe" target="_blank">GitHub</a> </li>
+                        <li>
+                            <a href="http://www.phplucidframe.com" class="active">Welcome</a>
+                        </li>
+                        <li>
+                            <a href="http://www.phplucidframe.com/cookbook">Documentation</a>
+                        </li>
+                        <li>
+                            <a href="http://www.phplucidframe.com/api">API</a>
+                        </li>
+                        <li>
+                            <a href="http://www.phplucidframe.com/community">Community</a>
+                        </li>
+                        <li>
+                            <a href="http://www.phplucidframe.com/downloads">Downloads</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/phplucidframe/phplucidframe" target="_blank">GitHub</a>
+                        </li>
                     </ul>
                     <ul class="social-icons">
                         <li><a href="https://fb.com/lucidframe.myanmar" class="fb" target="_blank">Facebook</a></li>
@@ -100,34 +94,59 @@
                                     <p>PHPLucidFrame is especially designed for PHP, MySQL and Apache. It is simple, fast and easy to install.</p>
                                 </li>
                                 <li class="two-lines">
-                                    <p> <i class="fa fa-cog main-icon"></i>
+                                    <p>
+                                        <i class="fa fa-cog main-icon"></i>
                                         <br />Almost zero configuration - just configure your database setting and you are ready to go.
-                                        <br />No complex JSON, XML, YAML or vHost configuration. </p>
+                                        <br />No complex JSON, XML, YAML or vHost configuration.
+                                    </p>
                                 </li>
                                 <li class="three-lines">
-                                    <p> <i class="fa fa-puzzle-piece main-icon"></i>
+                                    <p>
+                                        <i class="fa fa-puzzle-piece main-icon"></i>
                                         <br />Supports a wide range of web application development features:
-                                        <br /> <span><i class="fa fa-check"></i> Datatase access API</span> <span><i class="fa fa-check"></i> Security control</span> <span><i class="fa fa-check"></i> URL routing</span> <span><i class="fa fa-check"></i> Validation helpers</span> <span><i class="fa fa-check"></i> Internationalization & Localization</span>
-                                        <br /> <span><i class="fa fa-check"></i> User authentication API</span> <span><i class="fa fa-check"></i> Schema Manager</span> <span><i class="fa fa-check"></i> Database Seeding</span> <span><i class="fa fa-check"></i> Shell & Console Tool</span> <span><i class="fa fa-check"></i> Ajax</span> </p>
+                                        <br />
+                                        <span><i class="fa fa-check"></i> Datatase access API</span>
+                                        <span><i class="fa fa-check"></i> Security control</span>
+                                        <span><i class="fa fa-check"></i> URL routing</span>
+                                        <span><i class="fa fa-check"></i> Validation helpers</span>
+                                        <span><i class="fa fa-check"></i> Internationalization & Localization</span>
+                                        <br />
+                                        <span><i class="fa fa-check"></i> User authentication API</span>
+                                        <span><i class="fa fa-check"></i> Schema Manager</span>
+                                        <span><i class="fa fa-check"></i> Database Seeding</span>
+                                        <span><i class="fa fa-check"></i> Shell & Console Tool</span>
+                                        <span><i class="fa fa-check"></i> Ajax</span>
+                                    </p>
                                 </li>
                                 <li class="one-line">
-                                    <p> <i class="fa fa-code main-icon"></i>
-                                        <br />No template engine to eliminate overhead of template processing and to save your storage from template cache files. </p>
+                                    <p>
+                                        <i class="fa fa-code main-icon"></i>
+                                        <br />No template engine to eliminate overhead of template processing and to save your storage from template cache files.
+                                    </p>
                                 </li>
                                 <li class="two-lines">
-                                    <p> <i class="fa fa-thumbs-o-up main-icon"></i>
+                                    <p>
+                                        <i class="fa fa-thumbs-o-up main-icon"></i>
                                         <br />This is not a framework that rules you, but helps you.
-                                        <br />Simple is always the best. </p>
+                                        <br />Simple is always the best.
+                                    </p>
                                 </li>
-                                <li> </li>
+                                <li>
+                                </li>
                             </ul>
                         </div>
                         <p>
-                            <a href="http://phplucidframe.sithukyaw.com/download/release/latest" class="button green large" rel="nofollow"> <i class="fa fa-download"></i> Download 1.15.0 stable </a>
-                            <div class="slider-nav"> <a href="#" class="buttons prev"><i class="fa fa-chevron-circle-left"></i></a> <a href="#" class="buttons next"><i class="fa fa-chevron-circle-right"></i></a> </div>
+                            <a href="http://www.phplucidframe.com/download/release/latest" class="button green large" rel="nofollow">
+                                <i class="fa fa-download"></i> Download 1.15.0 stable </a>
+                            <div class="slider-nav">
+                                <a href="#" class="buttons prev"><i class="fa fa-chevron-circle-left"></i></a>
+                                <a href="#" class="buttons next"><i class="fa fa-chevron-circle-right"></i></a>
+                            </div>
                         </p>
                     </div>
-                    <p> <i class="fa fa-file-text-o"></i> <a href="https://github.com/phplucidframe/phplucidframe/wiki/Release-Notes:-1.15.0" target="_blank">Check the Release Note 1.15.0 stable</a></p>
+                    <p>
+                        <i class="fa fa-file-text-o"></i> <a href="https://github.com/phplucidframe/phplucidframe/wiki/Release-Notes:-1.15.0" target="_blank">Check the Release Note 1.15.0 stable</a>
+                    </p>
                     <h3>PHPLucidFrame is suitable for you if...</h3>
                     <ul class="custom-list-style">
                         <li><i class="fa fa-check-square-o"></i> You are new to any web application development framework.</li>
@@ -139,15 +158,21 @@
                         <li><i class="fa fa-check-square-o"></i> You want no more template language to learn.</li>
                         <li><i class="fa fa-check-square-o"></i> You want zero configuration and broad compatibility with hosting that you don't have right to configure your server.</li>
                     </ul>
-                    <h3> <i class="fa fa-trello"></i> The Road of PHPLucidFrame Development is now on Trello....</h3>
-                    <p> <a href="http://goo.gl/Xg5PM0" target="_blank" class="button black large">Okay, got it! I'm gonna check.</a></p>
+                    <h3>
+    <i class="fa fa-trello"></i> The Road of PHPLucidFrame Development is now on Trello....</h3>
+                    <p>
+                        <a href="http://goo.gl/Xg5PM0" target="_blank" class="button black large">Okay, got it! I'm gonna check.</a>
+                    </p>
                 </div>
                 <!-- .container -->
             </div>
             <!-- #page -->
             <div id="footer">
                 <div class="container">
-                    <div id="copyright"> <span id="left">&copy; 2016</span> <span id="right">PHPLucidFrame</span> </div>
+                    <div id="copyright">
+                        <span id="left">&copy; 2016</span>
+                        <span id="right">PHPLucidFrame</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -157,7 +182,7 @@
 </body>
 
 </html>
-<script src="http://phplucidframe.sithukyaw.com/vendor/tinycarousel/jquery.tinycarousel.min.js" type="text/javascript"></script>
+<script src="http://www.phplucidframe.com/vendor/tinycarousel/jquery.tinycarousel.min.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(function() {
         $("#slider").tinycarousel({
