--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta itemprop="image" content="http://www.phplucidframe.com/assets/images/logo-200x200.jpg" />
     <link rel="shortcut icon" href="http://www.phplucidframe.com/assets/images/favicon.ico" type="image/x-icon" />
     <link href="http://www.phplucidframe.com/assets/css/base.css" rel="stylesheet" type="text/css" />
-    <link href="http://phplucidframe.github.io/vendor/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="http://www.phplucidframe.com/app/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="http://www.phplucidframe.com/assets/js/vendor/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="http://www.phplucidframe.com/app/assets/css/style.css" rel="stylesheet" type="text/css" />
     <script src="http://www.phplucidframe.com/assets/js/vendor/jquery/jquery.min.js" type="text/javascript"></script>
@@ -51,27 +51,6 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager -->
-    <noscript>
-        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-M34CB3" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-M34CB3');
-    </script>
-    <!-- End Google Tag Manager -->
     <div id="wrapper">
         <div id="page-container">
             <div id="header">
@@ -104,38 +83,29 @@
                         <div class="viewport">
                             <ul class="overview">
                                 <li class="multi-lines">
-                                    <p>PHPLucidFrame (a.k.a LucidFrame) is a mini application development framework - a toolkit for PHP developers. It provides logical structure and several helper utilities for web application development. It uses a functional architecture to simplify the development of complex applications.</p>
+                                    <p>PHPLucidFrame (a.k.a LucidFrame) is an application development framework for PHP developers. It provides logical structure and several helper utilities for web application development. It uses a functional architecture to simplify the development of complex applications.</p>
                                     <p>PHPLucidFrame is especially designed for PHP, MySQL and Apache. It is simple, fast and easy to install.</p>
                                 </li>
                                 <li class="two-lines">
-                                    <p> <i class="fa fa-cog main-icon"></i>
-                                        <br />Almost zero configuration - just configure your database setting and you are ready to go.
-                                        <br />No complex JSON, XML, YAML or vHost configuration. </p>
+                                    <p> <i class="fa fa-cog main-icon"></i> <br />Almost zero configuration - just configure your database setting and you are ready to go.<br />No complex JSON, XML, YAML or vHost configuration. </p>
                                 </li>
                                 <li class="three-lines">
-                                    <p> <i class="fa fa-puzzle-piece main-icon"></i>
-                                        <br />Supports a wide range of web application development features:
-                                        <br /> <span><i class="fa fa-check"></i> Datatase access API</span> <span><i class="fa fa-check"></i> Security control</span> <span><i class="fa fa-check"></i> URL routing</span> <span><i class="fa fa-check"></i> Validation helpers</span> <span><i class="fa fa-check"></i> Internationalization & Localization</span>
-                                        <br /> <span><i class="fa fa-check"></i> User authentication API</span> <span><i class="fa fa-check"></i> Schema Manager</span> <span><i class="fa fa-check"></i> Database Seeding</span> <span><i class="fa fa-check"></i> Shell & Console Tool</span> <span><i class="fa fa-check"></i> Ajax</span> </p>
+                                    <p> <i class="fa fa-puzzle-piece main-icon"></i> <br />Supports a wide range of web application development features:<br /> <span><i class="fa fa-check"></i> Datatase access API</span> <span><i class="fa fa-check"></i> Security control</span> <span><i class="fa fa-check"></i> URL routing</span> <span><i class="fa fa-check"></i> Validation helpers</span> <span><i class="fa fa-check"></i> Internationalization & Localization</span><br /> <span><i class="fa fa-check"></i> User authentication API</span> <span><i class="fa fa-check"></i> Schema Manager</span> <span><i class="fa fa-check"></i> Database Seeding</span> <span><i class="fa fa-check"></i> Shell & Console Tool</span> <span><i class="fa fa-check"></i> Ajax</span> </p>
                                 </li>
                                 <li class="one-line">
-                                    <p> <i class="fa fa-code main-icon"></i>
-                                        <br />No template engine to eliminate overhead of template processing and to save your storage from template cache files. </p>
+                                    <p> <i class="fa fa-code main-icon"></i> <br />No template engine to eliminate overhead of template processing and to save your storage from template cache files. </p>
                                 </li>
                                 <li class="two-lines">
-                                    <p> <i class="fa fa-thumbs-o-up main-icon"></i>
-                                        <br />This is not a framework that rules you, but helps you.
-                                        <br />Simple is always the best. </p>
+                                    <p> <i class="fa fa-thumbs-o-up main-icon"></i> <br />This is not a framework that rules you, but helps you. <br />Simple is always the best. </p>
                                 </li>
                                 <li> </li>
                             </ul>
                         </div>
-                        <p>
-                            <a href="http://www.phplucidframe.com/download/release/latest" class="button green large" rel="nofollow"> <i class="fa fa-download"></i> Download 1.17.0 </a>
+                        <p> <a href="http://www.phplucidframe.com/download/release/latest" class="button green large" rel="nofollow"> <i class="fa fa-download"></i> Download 1.19.0 </a>
                             <div class="slider-nav"> <a href="#" class="buttons prev"><i class="fa fa-chevron-circle-left"></i></a> <a href="#" class="buttons next"><i class="fa fa-chevron-circle-right"></i></a> </div>
                         </p>
                     </div>
-                    <p> <i class="fa fa-file-text-o"></i> <a href="https://github.com/phplucidframe/phplucidframe/wiki/Release-Notes:-1.17.0" target="_blank">Check the Release Note 1.17.0</a></p>
+                    <p> <i class="fa fa-file-text-o"></i> <a href="https://github.com/phplucidframe/phplucidframe/wiki/Release-Notes:-1.19.0" target="_blank">Check the Release Note 1.19.0</a></p>
                     <h3>PHPLucidFrame is suitable for you if...</h3>
                     <ul class="custom-list-style">
                         <li><i class="fa fa-check-square-o"></i> You are new to any web application development framework.</li>
@@ -155,14 +125,14 @@
             <!-- #page -->
             <div id="footer">
                 <div class="container">
-                    <div id="copyright"> <span id="left">&copy; 2017</span> <span id="right">PHPLucidFrame</span> </div>
+                    <div id="copyright"> <span id="left">&copy; 2018</span> <span id="right">PHPLucidFrame</span> </div>
                 </div>
             </div>
         </div>
         <!-- #page-container -->
     </div>
     <!-- #wrapper -->
+    <script src="http://www.phplucidframe.com/app/assets/js/tinycarousel.min.js" type="text/javascript"></script>
 </body>
 
 </html>
-<script src="http://www.phplucidframe.com/vendor/tinycarousel/jquery.tinycarousel.min.js" type="text/javascript"></script>
