Add local stored fontawesome library

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Bootstrap CSS-->
     <link href="http://www.phplucidframe.com/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome CSS-->
-    <link href="http://www.phplucidframe.com/app/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="./assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Google fonts - Poppins-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600" rel="stylesheet" type="text/css" />
     <!-- theme stylesheet-->
